--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.3.0"
+    "mongoose": "^8.3.0",
+    "react-data-table-component": "^7.6.2",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
